ajustando para aceitar o cep

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <label for="localizacao">Localização:</label>
             <input type="text" id="localizacao" placeholder="Digite a localização (bairro, rua, CEP)" required>
 
+            <label for="cep">CEP:</label>
+            <input type="text" id="cep" placeholder="Digite o CEP" pattern="\d{5}-?\d{3}" required title="Formato: 12345-678 ou 12345678">
+
             <label for="descricao">Descrição do Problema:</label>
             <textarea id="descricao" name="descricao" placeholder="Descreva o problema" required></textarea>
 
