--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
         <h2>Relatos de Emergência</h2>
         <form id="relatoForm">
             <label for="localizacao">Localização:</label>
-            <input type="text" id="localizacao" placeholder="Digite a localização (bairro, rua, CEP)" required>
-
-            <label for="cep">CEP:</label>
-            <input type="text" id="cep" placeholder="Digite o CEP" pattern="\d{5}-?\d{3}" required title="Formato: 12345-678 ou 12345678">
+            <input type="text" id="localizacao" placeholder="Digite a localização (bairro, rua)" required>
 
             <label for="descricao">Descrição do Problema:</label>
             <textarea id="descricao" name="descricao" placeholder="Descreva o problema" required></textarea>
