ajuste na função de busca das cidades

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             </div>
         </form>
 
+        <div id="resultados"></div>
+        
         <div id="listaRelatos">
             <h3>Relatos Recentes</h3>
             <!-- Aqui você pode adicionar os relatos recentes dinamicamente via JavaScript -->
